--- a/index.html
+++ b/index.html
@@ -419,7 +419,20 @@
 
                 position: relative;
                 top: 0px;
-                left: 320px;
+                left: 220px;
+            }
+
+            #dropdownList{
+                width: 250px;
+                height: 400px;
+                position: absolute;
+                left: 2.8rem;
+            }
+
+            .headerPosition{
+                position: relative;
+                left: 100px;
+                top: 0px;
             }
 
             #billBtn{
@@ -912,7 +925,6 @@
                             <span id="store-tab" class="nav-link active">Store &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                             <span id="placeOrder-tab" class="nav-link active">Place Order &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                             <span class="nav-link active">About us &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-
                         </div>
                         <div id="profileDropdown" class="dropdown">
                             <img class="profile btn-secondary dropdown-toggle" data-bs-toggle="dropdown" src="assets/image/profile.jpg" alt="profile" title="profile">
@@ -1803,6 +1815,7 @@
     </div>
 </section>
 
+<!--Footer-->
 <footer id="footer" class="margin padding position footer fonts">
     <div class="margin padding">
         <div class="row margin padding">
@@ -1816,7 +1829,11 @@
                 </div>
                 <div id="fDiv2" class="col-sm-4 col-xs">
                     <p>Primary Menu</p>
-                    <p><a href="#">Dashboard</a><br><a href="customerManage.html">Customer</a><br><a href="storeManage.html">Store</a><br><a href="placeOrderManage.html">Place order</a><br>About us</p>
+                    <p><a href="#">Dashboard</a><br>
+                       <a href="customerManage.html">Customer</a><br>
+                       <a href="storeManage.html">Store</a><br>
+                       <a href="placeOrderManage.html">Place order
+                       </a><br>About us</p>
                 </div>
                 <div id="fDiv3" class="col-sm-4 col-xs">
                     <p>Contact <Us></Us></p>
