--- a/index.html
+++ b/index.html
@@ -1179,7 +1179,7 @@
         <div class="absolutePosition">
             <button class="noBorder buttons btn-all btn-new-store newBtn-color" data-bs-toggle="modal" data-bs-target="#newModal" type="button"><span>New</span></button>
             <button class="noBorder buttons btn-all btn-update-store updateBtn-color " data-bs-toggle="modal" data-bs-target="#updateModal" type="button"><span>Update</span></button>
-            <button class="noBorder buttons btn-all btn-remove btn-remove-store removeBtn-color" data-bs-toggle="modal" data-bs-target="#removeModal" type="button"><span>Remove</span></button>
+            <button class="noBorder buttons btn-all btn-remove btn-remove-store removeBtn-color" data-bs-toggle="modal" data-bs-target="#removeModalStore" type="button"><span>Remove</span></button>
         </div>
     </div>
 
@@ -1346,7 +1346,7 @@
     </div>
 
     <!--  remove Modal  -->
-    <div class="modal fade" id="removeModal " tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="removeModalStore" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
