--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="assets/stylesheet/placeOrderCSSFile.css">
 
     <style>
+        .margin-left-0{
+            margin-left: 0;
+        }
 
         @media all and (min-width: 769px) and (max-width: 1024px){
 
@@ -1059,26 +1062,23 @@
                         <!--    code here  -->
                         <div class="row">
                             <div class="col-12 margin-bottom">
-                                <label for="-inputCustomerId" class="form-label">Customer Id :</label>
-                                <select id="-inputCustomerId" class="form-select">
-                                    <option selected>C001</option>
-                                    <option>...</option>
-                                </select>
+                                <label for="-inputCustomerId" class="margin-left-0 form-label">Customer Id :</label>
+                                <input type="text" id="-inputCustomerId" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
                             </div>
                             <div class="col-12 margin-bottom">
-                                <label for="_inputCustomerName" class="form-label inputFieldMargin">Customer Name :</label>
-                                <input type="text" id="_inputCustomerName" class="form-control inputFieldMargin" placeholder="item name" aria-label="item name">
+                                <label for="_inputCustomerName" class="margin-left-0 form-label inputFieldMargin">Customer Name :</label>
+                                <input type="text" id="_inputCustomerName" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col-12 margin-bottom">
-                                <label for=" inputCity" class="form-label ">City :</label>
-                                <input type="text" id=" inputCity " class="form-control" placeholder="select city" aria-label="City">
+                                <label for=" inputCity" class="margin-left-0 form-label ">City :</label>
+                                <input type="text" id=" inputCity " class="margin-left-0 form-control" placeholder="select city" aria-label="City">
                             </div>
                             <div class="col-12 margin-bottom">
-                                <label for=" inputTelephone" class="form-label inputFieldMargin">Telephone :</label>
-                                <input type="text" id=" inputTelephone " class="form-control inputFieldMargin" placeholder="telephone" aria-label="telephone">
+                                <label for=" inputTelephone" class="margin-left-0 form-label inputFieldMargin">Telephone :</label>
+                                <input type="text" id=" inputTelephone " class="margin-left-0 form-control inputFieldMargin" placeholder="telephone" aria-label="telephone">
                             </div>
                         </div>
                     </div>
@@ -1102,26 +1102,23 @@
                         <!--    code here  -->
                         <div class="row">
                             <div class="col-12 margin-bottom">
-                                <label for=" inputCustomerId" class="form-label">Customer Id</label>
-                                <select id=" inputCustomerId" class="form-select">
-                                    <option selected>C001</option>
-                                    <option>...</option>
-                                </select>
+                                <label for=" inputCustomerId" class="margin-left-0 form-label">Customer Id</label>
+                                <input type="text" id=" inputCustomerId" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
                             </div>
                             <div class="col-12 margin-bottom">
-                                <label for=" inputCustomerName" class="form-label inputFieldMargin">Customer Name :</label>
-                                <input type="text" id=" inputCustomerName" class="form-control inputFieldMargin" placeholder="item name" aria-label="item name">
+                                <label for=" inputCustomerName" class="margin-left-0 form-label inputFieldMargin">Customer Name :</label>
+                                <input type="text" id=" inputCustomerName" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col-12 margin-bottom">
-                                <label for="inputCity" class="form-label ">City :</label>
-                                <input type="text" id="inputCity " class="form-control" placeholder="select city" aria-label="City">
+                                <label for="inputCity" class="margin-left-0 form-label ">City :</label>
+                                <input type="text" id="inputCity " class="margin-left-0 form-control" placeholder="select city" aria-label="City">
                             </div>
                             <div class="col-12 margin-bottom">
-                                <label for="inputTelephone" class="form-label inputFieldMargin">Telephone :</label>
-                                <input type="text" id="inputTelephone" class="form-control inputFieldMargin" placeholder="telephone" aria-label="telephone">
+                                <label for="inputTelephone" class="margin-left-0 form-label inputFieldMargin">Telephone :</label>
+                                <input type="text" id="inputTelephone" class="margin-left-0 form-control inputFieldMargin" placeholder="telephone" aria-label="telephone">
                             </div>
                         </div>
                     </div>
@@ -1145,15 +1142,12 @@
                         <!--   code here   -->
                         <div class="row">
                             <div class="col-12 margin-bottom">
-                                <label for="inputCustomerId" class="form-label">Customer Id</label>
-                                <select id="inputCustomerId" class="form-select">
-                                    <option selected>I001</option>
-                                    <option>...</option>
-                                </select>
+                                <label for="inputCustomerId" class="margin-left-0 form-label">Customer Id</label>
+                                <input type="text" id="inputCustomerId" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
                             </div>
                             <div class="col-12 margin-bottom">
-                                <label for="inputCustomerName" class="form-label inputFieldMargin">Customer Name :</label>
-                                <input type="text" id="inputCustomerName" class="form-control inputFieldMargin" placeholder="item name" aria-label="item name">
+                                <label for="inputCustomerName" class="margin-left-0 form-label inputFieldMargin">Customer Name :</label>
+                                <input type="text" id="inputCustomerName" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
                             </div>
                         </div>
                     </div>
@@ -1271,26 +1265,23 @@
                     <!--    code here  -->
                     <div class="row">
                         <div class="col-12 margin-bottom">
-                            <label for="-inputItemCode" class="form-label">Item Code :</label>
-                            <select id="-inputItemCode" class="form-select">
-                                <option selected>I001</option>
-                                <option>...</option>
-                            </select>
+                            <label for="-inputItemCode" class="margin-left-0 form-label">Item Code :</label>
+                            <input type="text" id="-inputItemCode" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
                         </div>
                         <div class="col-12 margin-bottom">
-                            <label for="_inputItemName" class="form-label inputFieldMargin">Item Name :</label>
-                            <input type="text" id="_inputItemName" class="form-control inputFieldMargin" placeholder="item name" aria-label="item name">
+                            <label for="_inputItemName" class="margin-left-0 form-label inputFieldMargin">Item Name :</label>
+                            <input type="text" id="_inputItemName" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-12 margin-bottom">
-                            <label for=" inputCity" class="form-label ">QTY On Hand :</label>
-                            <input type="text" id=" inputCity" class="form-control" placeholder="select city" aria-label="City">
+                            <label for=" inputCity" class="margin-left-0 form-label ">QTY On Hand :</label>
+                            <input type="text" id=" inputCity" class="margin-left-0 form-control" placeholder="select city" aria-label="City">
                         </div>
                         <div class="col-12 margin-bottom">
-                            <label for=" inputTelephone" class="form-label inputFieldMargin">Unit Price :</label>
-                            <input type="text" id=" inputTelephone" class="form-control inputFieldMargin" placeholder="telephone" aria-label="telephone">
+                            <label for=" inputTelephone" class="margin-left-0 form-label inputFieldMargin">Unit Price :</label>
+                            <input type="text" id=" inputTelephone" class="margin-left-0 form-control inputFieldMargin" placeholder="telephone" aria-label="telephone">
                         </div>
                     </div>
                 </div>
@@ -1314,26 +1305,23 @@
                     <!--    code here  -->
                     <div class="row">
                         <div class="col-12 margin-bottom">
-                            <label for=" -inputItemCode" class="form-label">Item Code :</label>
-                            <select id=" -inputItemCode" class="form-select">
-                                <option selected>I001</option>
-                                <option>...</option>
-                            </select>
+                            <label for=" -inputItemCode" class="margin-left-0 form-label">Item Code :</label>
+                            <input type="text" id=" -inputItemCode" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
                         </div>
                         <div class="col-12 margin-bottom">
-                            <label for=" _inputItemName" class="form-label inputFieldMargin">Item Name :</label>
-                            <input type="text" id=" _inputItemName" class="form-control inputFieldMargin" placeholder="item name" aria-label="item name">
+                            <label for=" _inputItemName" class="margin-left-0 form-label inputFieldMargin">Item Name :</label>
+                            <input type="text" id=" _inputItemName" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-12 margin-bottom">
-                            <label for="inputCity" class="form-label ">QTY On Hand :</label>
-                            <input type="text" id="inputCity" class="form-control" placeholder="select city" aria-label="City">
+                            <label for="inputCity" class="margin-left-0 form-label ">QTY On Hand :</label>
+                            <input type="text" id="inputCity" class="margin-left-0 form-control" placeholder="select city" aria-label="City">
                         </div>
                         <div class="col-12 margin-bottom">
-                            <label for="inputTelephone" class="form-label inputFieldMargin">Unit Price :</label>
-                            <input type="text" id="-inputTelephone" class="form-control inputFieldMargin" placeholder="telephone" aria-label="telephone">
+                            <label for="inputTelephone" class="margin-left-0 form-label inputFieldMargin">Unit Price :</label>
+                            <input type="text" id="-inputTelephone" class="margin-left-0 form-control inputFieldMargin" placeholder="telephone" aria-label="telephone">
                         </div>
                     </div>
                 </div>
@@ -1357,15 +1345,12 @@
                     <!--    code here  -->
                     <div class="row">
                         <div class="col-12 margin-bottom">
-                            <label for="_inputItemCode" class="form-label">Item Code :</label>
-                            <select id="_inputItemCode" class="form-select">
-                                <option selected>I001</option>
-                                <option>...</option>
-                            </select>
+                            <label for="_inputItemCode" class="margin-left-0 form-label">Item Code :</label>
+                            <input type="text" id="_inputItemCode" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
                         </div>
                         <div class="col-12 margin-bottom">
-                            <label for="-inputItemName" class="form-label inputFieldMargin">Item Name :</label>
-                            <input type="text" id="-inputItemName" class="form-control inputFieldMargin" placeholder="item name" aria-label="item name">
+                            <label for="-inputItemName" class="margin-left-0 form-label inputFieldMargin">Item Name :</label>
+                            <input type="text" id="-inputItemName" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
                         </div>
                     </div>
                 </div>
