--- a/index.html
+++ b/index.html
@@ -966,7 +966,7 @@
             <table class="table table-responsive">
                 <thead>
                     <tr>
-                        <th class="OrderTableHead " scope="col">Customer Id</th>
+                        <th class="OrderTableHead" scope="col">Customer Id</th>
                         <th class="OrderTableHead" scope="col">Customer Name</th>
                         <th class="OrderTableHead" scope="col">City</th>
                         <th class="OrderTableHead" scope="col">Telephone</th>
@@ -1030,23 +1030,23 @@
                         <!--    code here  -->
                         <div class="row">
                             <div class="col-12 margin-bottom">
-                                <label for=" inputCustomerId" class="margin-left-0 form-label">Customer Id</label>
-                                <input type="text" id=" inputCustomerId" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
+                                <label for="inputCustomerIdU" class="margin-left-0 form-label">Customer Id</label>
+                                <input type="text" id="inputCustomerIdU" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
                             </div>
                             <div class="col-12 margin-bottom">
-                                <label for=" inputCustomerName" class="margin-left-0 form-label inputFieldMargin">Customer Name :</label>
-                                <input type="text" id=" inputCustomerName" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
+                                <label for="inputCustomerNameU" class="margin-left-0 form-label inputFieldMargin">Customer Name :</label>
+                                <input type="text" id="inputCustomerNameU" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col-12 margin-bottom">
-                                <label for="inputCity" class="margin-left-0 form-label ">City :</label>
-                                <input type="text" id="inputCity " class="margin-left-0 form-control" placeholder="select city" aria-label="City">
+                                <label for="inputCityU" class="margin-left-0 form-label ">City :</label>
+                                <input type="text" id="inputCityU" class="margin-left-0 form-control" placeholder="select city" aria-label="City">
                             </div>
                             <div class="col-12 margin-bottom">
-                                <label for="inputTelephone" class="margin-left-0 form-label inputFieldMargin">Telephone :</label>
-                                <input type="text" id="inputTelephone" class="margin-left-0 form-control inputFieldMargin" placeholder="telephone" aria-label="telephone">
+                                <label for="inputTelephoneU" class="margin-left-0 form-label inputFieldMargin">Telephone :</label>
+                                <input type="text" id="inputTelephoneU" class="margin-left-0 form-control inputFieldMargin" placeholder="telephone" aria-label="telephone">
                             </div>
                         </div>
                     </div>
